apply plugin: 'com.android.application'

android {
    compileSdk 35

    defaultConfig {
        applicationId "com.dev.victor.spaper"
        minSdk 21
        targetSdk 33
        versionCode 17
        versionName "2.1.4"
        renderscriptTargetApi 20
        renderscriptSupportModeEnabled true
    }
    buildTypes {
        release {
            minifyEnabled false

            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    // Butterknife requires Java 8.
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    namespace 'com.dev.victor.spaper'
}

repositories {

    maven { url "https://jitpack.io" }

}

tasks.withType(JavaCompile).configureEach{
    options.fork = true
    options.forkOptions.jvmArgs +=[
            '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
            '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
}


dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    testImplementation 'junit:junit:4.12'

    /*compile project('Volley')*/

    implementation files('libs/YouTubeAndroidPlayerApi.jar')
    implementation 'de.hdodenhof:circleimageview:1.3.0'

/*
    implementation 'com.github.ParkSangGwon:TedPermission:v1.0.6'
*/
    implementation 'io.github.ParkSangGwon:tedpermission-normal:3.3.0'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'androidx.recyclerview:recyclerview:1.3.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'androidx.palette:palette:1.0.0'
    implementation 'com.squareup.picasso:picasso:2.5.2'
    implementation 'com.nineoldandroids:library:2.4.0'
    implementation 'com.pnikosis:materialish-progress:1.5'
    implementation 'com.makeramen:roundedimageview:2.2.0'
    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
    implementation group: 'jp.wasabeef', name: 'blurry', version: '4.0.0'
    implementation 'com.gordonwong:material-sheet-fab:1.0.4'
    implementation 'com.jakewharton:butterknife:10.2.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'

    implementation 'com.android.volley:volley:1.2.1'

    implementation 'com.balysv:material-ripple:1.0.2'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.github.paolorotolo:appintro:3.3.0'
    implementation 'com.google.android.gms:play-services-gcm:17.0.0'



    implementation 'com.github.michael-rapp:android-material-preferences:2.4.0'

    implementation 'com.github.GrenderG:Prefs:1.1'

}
apply plugin: 'com.google.gms.google-services'
